--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <plugin id="cordova-plugin-admob-mediation-adcash" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>cordova-plugin-admob-mediation-adcash</name>
-	<dependency id="cordova-plugin-admob-free" version="~0.8.0" />
+	<dependency id="cordova-plugin-admob-free" />
 	<platform name="android">
 		<config-file parent="/*" target="AndroidManifest.xml">
 			<uses-permission android:name="android.permission.INTERNET" />
