--- a/plugin.xml
+++ b/plugin.xml
@@ -16,6 +16,7 @@
 				android:theme="@android:style/Theme.Translucent" />
 		</config-file>
 		
+		<framework src="src/android/addin.gradle" custom="true" type="gradleReference" />
 		<source-file src="src/android/adcash-admob-adapter.aar" target-dir="libs" />
 	</platform>
 </plugin>
